# django-polymorphic

./: .readthedocs.yaml  README.rst  justfile  pyproject.toml
.github/workflows/: bandit.yml  lint.yml  release.yml  scorecard.yml  test.yml  zizmor.yml
docs/: admin.rst  changelog.rst  conf.py  quickstart.rst  third-party.rst
docs/changelog/: index.rst
example/pexp/management/commands/: p2cmd.py  pcmd.py  polybench.py  polymorphic_create_test_data.py
src/polymorphic/: __init__.py  managers.py  query.py  related_descriptors.py
src/polymorphic/admin/: childadmin.py
src/polymorphic/contrib/: guardian.py
src/polymorphic/tests/: admintestcase.py  models.py  settings.py  test_admin.py  test_missing_coverage.py  test_orm.py
src/polymorphic/tests/migrations/: 0001_initial.py
